<resources>
    <string name="app_name">Easymed</string>
    <string name="title_activity_doctor_info">doctorInfo</string>4
    <string name="doctor_name">Doctor name</string>
    <string name="doctor_type">Doctor type</string>
    <string name="about_doctor">About Doctor</string>
    <string name="doctor_description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="book_appointment">Book an Appointment</string>
    <string name="doctor_timing">Timing</string>
    <string name="timing_details">4.00 PM - 8.00 PM</string>
    <string name="title_activity_expert_counseling_form_activity">expert_counseling_form_activity</string>
    <string name="doctor_fee">Fee</string>
    <string name="fee_amount">500 Tk</string>
</resources>
